--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "chartjs-plugin-zoom": "^0.6.6",
+    "moment": "^2.23.0",
     "vue": "^2.5.2",
     "vue-chartkick": "^0.5.0",
     "vue-router": "^3.0.1",
